RP-756 Add detection of proper names via x's for case significance checking